--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="by.mrc.shedule">
+    package="by.mrc.schedule">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".ScheduleApplication"
+        android:name="by.mrc.schedule.ScheduleApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="by.mrc.schedule.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
